# DocsNexus--Pandas

./: Readme.md  docker-compose.yml
backend/: .gitignore  generator.py  generator_api.py  pyproject.toml  server.py  vectorizer.py
backend/api/: assistant.py  search.py
backend/controllers/: assistant_search.py  rephraser.py  reranker.py  search_query.py
backend/dataset-creation/: Pandas_Embedding.ipynb  documentation_data.csv  reference_api.py
backend/weaviate_client/: client.py  load_pandas_data.py  schema.py
frontend/: index.html  package-lock.json
frontend/src/: App.tsx  index.css
